--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
-<body class="sidebar-collapse">
+<body class="sidebar-collapse" style="background-color: black;">
     <app-root></app-root>
 </body>
 </html>
