--- a/documentation/tutorial-components.html
+++ b/documentation/tutorial-components.html
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="../src/assets/img/favicon.png">
 	<link rel="apple-touch-icon" sizes="76x76" href="../src/assets/img/apple-icon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Components Documentation - Now UI Kit Angular by Creative Tim</title>
+  <title>Claggett</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -22,8 +22,8 @@
     <nav class="navbar navbar-expand-lg  fixed-top bg-white navbar-transparent  " color-on-scroll="500">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="https://creativetimofficial.github.io/claggett-power-skating/index" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
-                    Now Ui Kit Angular - Docs
+                <a class="navbar-brand" [routerLink]="['/index']" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
+                    claggett-power-skating
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
